Fix disarrow Overlap Event for NGCalendar

--- a/app/assets/stylesheets/modules/part.sass
+++ b/app/assets/stylesheets/modules/part.sass
@@ -42,4 +42,3 @@
 	.fc-event-container .fa
 		text-align: center
 		font-size: 1.2em
-		padding: 10px
